--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,43 @@
 {
-	"name": "wondeltd/php-client",
-	"description": "PHP Client for Wonde",
-	"license": "MIT",
-	"keywords": ["wonde"],
-	"authors": [
-		{
-			"name": "Philip Clifton",
-			"email": "pclifton@wonde.com"
-		}
-	],
-	"require": {
-		"php": "^7.2.5 || ^8.0",
-		"guzzlehttp/guzzle": "^7.2.0"
-	},
-	"require-dev": {
-		"phpunit/phpunit": "^9.0"
-	},
-	"autoload": {
-		"psr-4": {
-			"Wonde\\": "src"
-		}
-	}
+  "name": "wondeltd/php-client",
+  "description": "PHP Client for Wonde",
+  "license": "MIT",
+  "keywords": [
+    "wonde"
+  ],
+  "authors": [
+    {
+      "name": "Philip Clifton",
+      "email": "pclifton@wonde.com"
+    }
+  ],
+  "require": {
+    "php": "^8.1",
+    "ext-json": "*",
+    "ext-mbstring": "*",
+    "psr/log": "^1.0 || ^2.0 || ^3.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Wonde\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Wonde\\Tests\\": "tests"
+    }
+  },
+  "config": {
+    "lock": false,
+    "optimize-autoloader": true,
+    "sort-packages": true
+  },
+  "scripts": {
+    "test": "@php ./vendor/bin/phpunit"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
