--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,23 @@
     "php": "^8.1",
     "ext-json": "*",
     "ext-mbstring": "*",
+    "guzzlehttp/promises": "^1.5.3 || ^2.0",
+    "php-http/async-client-implementation": "^1.0",
+    "php-http/client-common": "^1.5 || ^2.0",
+    "php-http/discovery": "^1.15",
+    "php-http/httplug": "^1.1 || ^2.0",
+    "php-http/message": "^1.5",
+    "php-http/message-factory": "^1.1",
+    "psr/http-factory": "^1.0",
+    "psr/http-factory-implementation": "^1.0",
     "psr/log": "^1.0 || ^2.0 || ^3.0"
   },
   "require-dev": {
+    "guzzlehttp/psr7": "^1.8.4 || ^2.1.1",
+    "http-interop/http-factory-guzzle": "^1.0",
+    "monolog/monolog": "^1.6 || ^2.0 || ^3.0",
+    "nikic/php-parser": "^4.10.3",
+    "php-http/mock-client": "^1.3",
     "phpunit/phpunit": "^9.5"
   },
   "autoload": {
@@ -32,8 +46,10 @@
   },
   "config": {
     "lock": false,
-    "optimize-autoloader": true,
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "php-http/discovery": false
+    }
   },
   "scripts": {
     "test": "@php ./vendor/bin/phpunit"
