--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,7 @@
 *.php diff=php
 
 /.editorconfig export-ignore
+/.gitattributes export-ignore
+/.gitignore export-ignore
 /.phpunit.xml export-ignore
 /tests export-ignore
