--- a/.gitattributes
+++ b/.gitattributes
@@ -6,5 +6,5 @@
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.phpunit.xml export-ignore
+/phpunit.xml export-ignore
 /tests export-ignore
