--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,10 @@
     "guzzlehttp/psr7": "^1.8.4 || ^2.1.1",
     "http-interop/http-factory-guzzle": "^1.0",
     "monolog/monolog": "^1.6 || ^2.0 || ^3.0",
-    "nikic/php-parser": "^4.10.3",
+    "php-http/guzzle7-adapter": "^1.0",
     "php-http/mock-client": "^1.3",
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^9.5",
+    "symfony/var-dumper": "^6.3"
   },
   "autoload": {
     "psr-4": {
